# kedro-vertexai

./: .bumpversion.cfg  .copier-answers.yml  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .spellcheck.yml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  dictionary.dic  pyproject.toml  setup.cfg  setup.py  sonar-project.properties  tox.ini
.github/: CODEOWNERS  dependabot.yml
.github/actions/e2e_test/: action.yml
.github/actions/prepare_release/: action.yml
.github/actions/publish/: action.yml
.github/actions/sonarcloud/: action.yml
.github/actions/unit_tests/: action.yml
.github/workflows/: e2e-test.yml  ok-to-test.yml  prepare-release.yml  publish.yml  python-package.yml  spellcheck.yml  test.yml  test_and_publish.yml
dev-utils/: README.md  run_tests.sh
docs/: conf.py  index.rst  requirements.txt  spellcheck_exceptions.txt
docs/source/01_introduction/: 01_intro.md
docs/source/02_installation/: 01_installation.md  02_configuration.md
docs/source/03_getting_started/: 01_quickstart.md  02_gcp.md  03_mlflow.md  04_continuous_deployment.md  05_authentication.md
e2e/: catalog.yml  starter-config.yml  vertexai.yml
kedro_vertexai/: __init__.py  cli.py  client.py  config.py  constants.py  context_helper.py  data_models.py  dynamic_config.py  generator.py  grouping.py  hooks.py  runtime_config.py  utils.py
kedro_vertexai/auth/: __init__.py  gcp.py  gcp_credentials_provider.py  mlflow_request_header_provider.py  mlflow_request_header_provider_hook.py
kedro_vertexai/templates/: github-on-push.yml
kedro_vertexai/vertex_ai/: __init__.py  datasets.py  io.py  runner.py
tests/: __init__.py  test_auth.py  test_cli.py  test_config.py  test_config.yml  test_config_providers.py  test_context_helper.py  test_distributed_training.py  test_grouping.py  test_hooks.py  test_metadata_dataset.py  test_runner_and_dataset.py  test_vertex_ai_client.py  test_vertex_ai_generator.py  utils.py
tests/e2e/: catalog.yml  starter-config.yml  vertexai.yml
tests/e2e/grouping/: pipeline_data_processing.py  pipeline_data_science.py  starter-config.yml  vertexai.yml
tests/e2e/grouping/overwrite/conf/base/: catalog.yml  vertexai.yml
tests/e2e/grouping/overwrite/src/spaceflights/pipelines/data_processing/: pipeline.py
tests/e2e/grouping/overwrite/src/spaceflights/pipelines/data_science/: pipeline.py
tests/e2e/grouping/overwrite/src/spaceflights/pipelines/reporting/: pipeline.py
tests/e2e/standard/: starter-config.yml
tests/e2e/standard/overwrite/conf/base/: catalog.yml  vertexai.yml
tests/e2e/standard/overwrite/src/spaceflights/pipelines/reporting/: pipeline.py
tests/infra/: README.md  backend.tf.sample  infra.env.sample  main.tf  outputs.tf  service_account.tf  storage.tf  variables.tf
