[tool.poetry]
name = "kedro-vertexai"
version = "1.0.0"
description = "Kedro plugin with GCP Vertex AI support"
readme = "README.md"
authors = ['Marcin Zabłocki <marcin.zablocki@getindata.com>', 'Mateusz Pytel <mateusz.pytel@getindata.com>', 'Mariusz Strzelecki <mariusz.strzelecki@getindata.com>', 'Artur Dobrogowski <artur.dobrogowski@getindata.com>']
maintainers = ['GetInData MLOPS <mlops@getindata.com>']
homepage = "https://github.com/getindata/kedro-vertexai"
repository = "https://github.com/getindata/kedro-vertexai"
documentation = "https://kedro-vertexai.readthedocs.io/"
keywords = ['kedro-plugin', 'kedro', 'mlops', 'vertexai', 'googlecloudplatform', 'machinelearning']
license = "Apache-2.0"
classifiers = [
    "Development Status :: 4 - Beta", # license and python versions added automatically
]

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.coverage.run]
branch = true
relative_files = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError"
]

[tool.isort]
known_third_party = ["click","google","kedro","kfp","kubernetes","tabulate", "pydantic","semver","setuptools"]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
kedro = "^1.0.0"
click = ">=8.0.4"
kfp = ">=2.0.0,<2.9.0"
tabulate = ">=0.8.7"
semver = ">=2.10,<4.0.0"
toposort = ">1.0,<2.0"
pyarrow = ">=14.0.1" # Stating explicitly for sub-dependency due to critical vulnerability
pydantic = ">=2,<3"
google-auth = "<3"
google-cloud-scheduler = ">=2.3.2"
google-cloud-iam = "<3"
gcsfs = ">=2022.1"
fsspec = ">=2022.1"
google-cloud-storage = "<3.0.0"
grpcio = ">=1.4.0,<2.0.0"
grpcio-status = ">=1.4.0,<2.0.0"
protobuf = ">=3.18.0,<21.0"
kedro-mlflow = {version = "^1.0.0", optional = true}
cachetools = ">=3.0,<6.0"
# pyaml in version 5 does problems with installing binaries/wheel in cicd env with python 3.10. The following fixes that:
# pyyaml = ">=6.0,<7"
google-cloud-aiplatform = {extras = ["metadata"], version = "^1.59.0"}
cloudpickle = "^3.0.0"
mlflow = ">=2.14.3,<3.0"
makefun = "^1.15.6"

[tool.poetry.extras]
mlflow = ["kedro-mlflow"]

[tool.poetry.group.dev.dependencies]
pytest = "<=8.4.1"
pytest-cov = ">=2.8.0,<7.0.0"
tox = ">=3.25.1,<5.0.0"
pre-commit = "4.3.0"
pytest-subtests = ">=0.8.0, <1.0.0"
responses = ">=0.13.4"

[tool.poetry.plugins] # Optional super table
[tool.poetry.plugins."kedro.project_commands"]
"vertexai" = "kedro_vertexai.cli:commands"

[tool.poetry.plugins."kedro.hooks"]
"vertexai_mlflow_tags_hook" = "kedro_vertexai.hooks:mlflow_tags_hook"

[tool.poetry.plugins."mlflow.request_header_provider"]
"unused" = "kedro_vertexai.auth.mlflow_request_header_provider:DynamicMLFlowRequestHeaderProvider"
